--- a/Предсказание времени поездки на такси/Задача_регрессии_Предсказание_продолжительности_поездки_на_такси.ipynb
+++ b/Предсказание времени поездки на такси/Задача_регрессии_Предсказание_продолжительности_поездки_на_такси.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/PavelNovikov888/practical_work/blob/master/%D0%97%D0%B0%D0%B4%D0%B0%D1%87%D0%B0_%D1%80%D0%B5%D0%B3%D1%80%D0%B5%D1%81%D1%81%D0%B8%D0%B8_%D0%9F%D1%80%D0%B5%D0%B4%D1%81%D0%BA%D0%B0%D0%B7%D0%B0%D0%BD%D0%B8%D0%B5_%D0%BF%D1%80%D0%BE%D0%B4%D0%BE%D0%BB%D0%B6%D0%B8%D1%82%D0%B5%D0%BB%D1%8C%D0%BD%D0%BE%D1%81%D1%82%D0%B8_%D0%BF%D0%BE%D0%B5%D0%B7%D0%B4%D0%BA%D0%B8_%D0%BD%D0%B0_%D1%82%D0%B0%D0%BA%D1%81%D0%B8.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "pxdc1MsPQhA0"
       },
       "source": [
@@ -27,11 +17,11 @@
       "source": [
         "<center> <img src=https://storage.googleapis.com/kaggle-competitions/kaggle/3333/media/taxi_meter.png align=\"right\" width=\"300\"/> </center>\n",
         "    \n",
-        "Вам предстоит решить настоящую задачу машинного обучения, направленную на автоматизацию бизнес процессов. Мы построим модель, которая будет предсказывать общую продолжительность поездки такси в Нью-Йорке. \n",
+        "Нам предстоит решить настоящую задачу машинного обучения, направленную на автоматизацию бизнес-процессов. Мы построим модель, которая будет предсказывать общую продолжительность поездки такси в Нью-Йорке. \n",
         "\n",
-        "Представьте вы заказываете такси из одной точки Нью-Йорка в другую, причем не обязательно конечная точка должна находиться в пределах города. Сколько вы должны будете за нее заплатить? Известно, что стоимость такси в США  рассчитывается на основе фиксированной ставки + тарифная стоимость, величина которой зависит от времени и расстояния. Тарифы варьируются в зависимости от города.\n",
+        "Представим, что мы заказываем такси из одной точки Нью-Йорка в другую, причем не обязательно конечная точка должна находиться в пределах города. Сколько мы должны будем за нее заплатить? Известно, что стоимость такси в США  рассчитывается на основе фиксированной ставки + тарифная стоимость, величина которой зависит от времени и расстояния. Тарифы варьируются в зависимости от города.\n",
         "\n",
-        "В свою очередь время поездки зависит от множества факторов таких как, откуда и куда вы едете, в какое время суток вы совершаете вашу поездку, погодных условий и так далее. \n",
+        "В свою очередь время поездки зависит от множества факторов таких как, откуда и куда мы едете, в какое время суток мы совершаем нашу поездку, погодных условий и так далее. \n",
         "\n",
         "Таким образом, если мы разработаем алгоритм, способный определять длительность поездки, мы сможем прогнозировать ее стоимость самым тривиальным образом, например, просто умножая стоимость на заданный тариф. \n",
         "Сервисы такси хранят огромные объёмы информации о поездках, включая такие данные как конечная, начальная точка маршрута, дата поездки и ее длительность. Эти данные можно использовать для того, чтобы прогнозировать длительность поездки в автоматическом режиме с привлечением искусственного интеллекта.\n",
@@ -48,7 +38,7 @@
         "5. Спроектировать процесс предсказания времени длительности поездки для новых данных\n",
         "\n",
         "Загрузить свое решение на платформу Kaggle, тем самым поучаствовав в настоящем Data Science соревновании.\n",
-        "Во время выполнения проекта вы отработаете навыки работы с несколькими источниками данных, генерации признаков, разведывательного анализа и визуализации данных, отбора признаков и, конечно же, построения моделей машинного обучения!\n"
+        "Во время выполнения проекта мы отработаем навыки работы с несколькими источниками данных, генерации признаков, разведывательного анализа и визуализации данных, отбора признаков и, конечно же, построения моделей машинного обучения!\n"
       ]
     },
     {
@@ -156,7 +146,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 224
         },
         "id": "jSU1dAeaQhBc",
         "outputId": "015b7782-4832-4a51-dacd-dd852d051312"
@@ -583,7 +573,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 269
         },
         "id": "XE7wu456QhBs",
         "outputId": "52327d25-b030-4c4c-c698-e3386bb972f2"
@@ -3707,6 +3697,13 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "7rQEub7FHJB2"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "5zZxKsMwQhCq"
       },
@@ -4972,16 +4969,71 @@
         "fig, ax = plt.subplots(figsize = (15,15))\n",
         "xgb.plot_importance(model, ax = ax, height=0.5)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##7.Подведение итогов"
+      ],
+      "metadata": {
+        "id": "QUWByfiNJooR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "В результате исследования данных получены следующие \n",
+        "результаты:  \n",
+        "1. Модель линейной регрессии LinearRegression()  \n",
+        "    RMSLE_train: 0.54  \n",
+        "    RMSLE_valid: 0.54  \n",
+        "2. Модель полиномиальной регрессии 2-ой степени PolynomialFeatures()    \n",
+        "    RMSLE_train: 0.47  \n",
+        "    RMSLE_valid: 0.70  \n",
+        "3. Модель полиномиальной регрессии 2-ой степени с L2-регуляризацией Ridge()  \n",
+        "    RMSLE_train: 0.48  \n",
+        "    RMSLE_valid: 0.48 \n",
+        "4. Модель дерева решений DecisionTreeRegressor()  \n",
+        "    RMSLE_train: 0.00  \n",
+        "    RMSLE_valid: 0.56  \n",
+        "5. Модель случайного леса RandomForestRegressor()  \n",
+        "    RMSLE_train: 0.40  \n",
+        "    RMSLE_valid: 0.41  \n",
+        "6. Модель градиентного бустинга над деревьями решений GradientBoostingRegressor()  \n",
+        "    RMSLE_train: 0.37  \n",
+        "    RMSLE_valid: 0.39  \n",
+        "7. Модель экстремального градиентного бустинга XGBoost  \n",
+        "    Modeling RMSLE 0.39132\n",
+        "\n",
+        "Наилучший результат, т.е наименьшее значение RMSLE на валидационной выборке, показала модель Градиентный бустинг над деревьями решений."
+      ],
+      "metadata": {
+        "id": "rrvYAfQUKXwF"
+      }
     }
   ],
   "metadata": {
     "colab": {
       "collapsed_sections": [
-        "GblX8G2HQhC3",
-        "rnZUST0OQhC4"
+        "IKKj8CYBQhBj",
+        "NCh3Q9sFQhBk",
+        "NgdafRBPQhBo",
+        "0mhUrvF2QhB-",
+        "jdWmztcNQhCA",
+        "jkmFgIkRQhCD",
+        "LzYrM7GbMA_I",
+        "mcDOMEPGQhCE",
+        "KZGxnoQcQhCT",
+        "u4uRRZJuQhCY",
+        "KHQ_9YKgQhCb",
+        "Vm5MPPqKQhCd",
+        "JXJqMNauQhCk",
+        "R7uL7KTJQhCm",
+        "sjeuj23IQhCw",
+        "rnZUST0OQhC4",
+        "Cs7ez7t9QhC6"
       ],
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
